# nihongo-anki-tetsudai

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  conanfile.txt  config.yaml
src/: main.cpp
src/core/: Sentence.h  Term.h  TermFragment.h
src/dict-parsers/: DictionaryParser.h  JishoParser.cpp  JishoParser.h
src/lib/anki/: VocabCardAdapter.h
src/lib/core/: Cache.cpp  Cache.h  Sentence.h  Term.h  VocabCard.h
src/lib/dict-parsers/: DictionaryParser.h  JishoParser.cpp  JishoParser.h  TanoshiiJapanese.cpp  TanoshiiJapanese.h
src/lib/util/: Conversion.h  HTTP.h  Lexic.h  Prompt.h  Screen.h  XML.h
src/util/: FileIO.h  XML.h
